--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta charset="UTF-8">
@@ -11,7 +11,393 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <style>
+        <style>
+        /* General enhancements */
+        :root {
+            --primary: #2563eb;
+            --primary-dark: #1e40af; /* For hover effects */
+            --background-light: #f9fafb;
+            --shadow: rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-primary {
+            background-color: var(--primary);
+            color: #fff;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .btn-primary:hover {
+            background-color: var(--primary-dark);
+            transform: translateY(-2px);
+        }
+
+        .btn-secondary {
+            background-color: var(--background-light);
+            color: var(--text, #333);
+            border: 1px solid var(--text-light, #6b7280);
+            border-radius: 6px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .btn-secondary:hover {
+            background-color: #e5e7eb;
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem; /* Consistent spacing */
+        }
+
+        input, select, textarea {
+            border: 1px solid var(--text-light, #d1d5db);
+            border-radius: 6px;
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+
+        input:focus, select:focus, textarea:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+        }
+
+        .valid-icon {
+            position: absolute;
+            right: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            display: none;
+        }
+
+        input.valid + .valid-icon,
+        select.valid + .valid-icon {
+            display: block;
+            color: var(--success, #10b981);
+        }
+
+        /* Mobile-specific styles */
+        @media (max-width: 640px) {
+            body {
+                font-size: 0.875rem;
+            }
+            nav .max-w-7xl, 
+            .booking-container, 
+            .footer-container {
+                padding-left: 0.75rem;
+                padding-right: 0.75rem;
+                max-width: 100vw;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
+            h2 {
+                font-size: 1.25rem;
+            }
+            h3 {
+                font-size: 1rem;
+            }
+            .booking-grid {
+                display: flex;
+                flex-direction: column;
+                gap: 1.5rem;
+            }
+            .carousel-container {
+                min-height: 120px;
+                max-height: 140px;
+            }
+            .carousel-item {
+                background-size: cover;
+                background-position: center;
+                height: 120px;
+            }
+            .progress-bar {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+            .booking-summary, #map {
+                min-width: 0;
+                width: 100% !important;
+                max-width: 100vw;
+                height: 200px;
+            }
+            .form-group, .form-section {
+                width: 100%;
+                min-width: 0;
+            }
+            .form-group input,
+            .form-group select,
+            .form-group textarea,
+            .form-group button {
+                font-size: 0.875rem;
+                padding: 0.75rem;
+                min-height: 44px;
+                box-sizing: border-box;
+            }
+            .form-navigation {
+                flex-direction: column;
+                gap: 0.75rem;
+            }
+            .nav-links {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background: var(--background, #fff);
+                flex-direction: column;
+                display: none;
+                z-index: 99;
+                padding: 0.75rem;
+            }
+            .nav-links.active {
+                display: flex;
+            }
+            .hamburger {
+                display: flex !important;
+            }
+            .footer-container {
+                flex-direction: column;
+                gap: 1rem;
+                padding-bottom: 1.5rem;
+            }
+            .modal-content {
+                width: 90vw;
+                min-width: unset;
+                max-width: 100vw;
+                padding: 1rem;
+                box-sizing: border-box;
+            }
+            .qr-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+            #qrcode {
+                width: 150px;
+                height: 150px;
+            }
+            #download-qr, #add-to-calendar, #modal-close {
+                width: 100%;
+                min-height: 48px;
+                font-size: 0.875rem;
+            }
+        }
+
+        /* Desktop-specific styles */
+        @media (min-width: 641px) {
+            body {
+                font-size: 1rem;
+            }
+            nav .max-w-7xl,
+            .booking-container,
+            .footer-container {
+                max-width: 1280px;
+                padding-left: 2rem;
+                padding-right: 2rem;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            h1 {
+                font-size: 2.5rem;
+                line-height: 1.2;
+            }
+            h2 {
+                font-size: 1.75rem;
+            }
+            h3 {
+                font-size: 1.25rem;
+            }
+            .booking-grid {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 2rem;
+                align-items: start;
+            }
+            .carousel-container {
+                min-height: 200px;
+                max-height: 240px;
+            }
+            .carousel-item {
+                background-size: cover;
+                background-position: center;
+                height: 200px;
+            }
+            .progress-bar {
+                display: flex;
+                flex-direction: row;
+                gap: 1.5rem;
+                justify-content: center;
+            }
+            .progress-step {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 0.5rem;
+                min-width: 120px;
+            }
+            .booking-summary,
+            #map {
+                width: 100%;
+                height: 400px;
+                border-radius: 8px;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            }
+            .form-group,
+            .form-section {
+                width: 100%;
+            }
+            .form-group input,
+            .form-group select,
+            .form-group textarea,
+            .form-group button {
+                font-size: 1rem;
+                padding: 1rem;
+                min-height: 48px;
+                border-radius: 6px;
+            }
+            .form-navigation {
+                display: flex;
+                flex-direction: row;
+                gap: 1rem;
+                justify-content: flex-end;
+            }
+            .nav-links {
+                display: flex;
+                flex-direction: row;
+                position: static;
+                background: none;
+                padding: 0;
+            }
+            .nav-links a {
+                font-size: 1rem;
+                padding: 0.5rem 1rem;
+            }
+            .hamburger {
+                display: none;
+            }
+            .footer-container {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 2rem;
+                padding: 2rem 0;
+            }
+            .modal-content {
+                width: 600px;
+                max-width: 90vw;
+                padding: 2rem;
+                border-radius: 12px;
+            }
+            .qr-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1.5rem;
+            }
+            #qrcode {
+                width: 200px;
+                height: 200px;
+            }
+            #download-qr,
+            #add-to-calendar,
+            #modal-close {
+                padding: 0.75rem 1.5rem;
+                font-size: 1rem;
+                min-height: 52px;
+            }
+            .btn-primary {
+                padding: 0.75rem 1.5rem;
+                font-size: 1rem;
+                transition: background-color 0.3s, transform 0.2s;
+            }
+            .btn-primary:hover {
+                background-color: var(--primary-dark);
+                transform: translateY(-2px);
+            }
+            .btn-secondary {
+                padding: 0.75rem 1.5rem;
+                font-size: 1rem;
+            }
+            .trust-section {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+                font-size: 1rem;
+                padding: 1rem;
+                background: var(--background-light);
+                border-radius: 8px;
+                margin-bottom: 1.5rem;
+            }
+            #distance-info {
+                font-size: 1rem;
+            }
+        }
+
+        /* General styles (unchanged) */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 4px;
+            justify-content: center;
+            align-items: center;
+            width: 32px;
+            height: 32px;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+        .hamburger div {
+            width: 24px;
+            height: 3px;
+            background: var(--text, #333);
+            border-radius: 2px;
+            transition: all 0.3s;
+        }
+        .select-container {
+            position: relative;
+            width: 100%;
+        }
+        .select-container select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>') no-repeat right 0.75rem center/16px 16px;
+            padding-right: 2.5rem;
+            max-height: 150px;
+            overflow-y: auto;
+        }
+        .select-container select:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+        }
+        .select-container select.error {
+            border-color: var(--error);
+        }
+        .select-container select.valid {
+            border-color: var(--success);
+        }
+        .confetti {
+            position: fixed;
+            width: 8px;
+            height: 8px;
+            opacity: 0.8;
+            animation: fall 2s linear;
+        }
+        @keyframes fall {
+            to { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+        }
+        ::selection {
+            background: var(--primary, #2563eb);
+            color: #fff;
+        }
+        [data-theme="dark"] ::selection {
+            background: var(--primary, #60a5fa);
+            color: #000;
+        }
+    </style>
+<!--     <style>
         :root {
             --primary: #2563eb;
             --primary-dark: #1e40af;
@@ -332,7 +718,7 @@
         #distance-info {
             font-size: 1rem;
         }
-    </style>
+    </style> -->
 </head>
 <body>
   <nav>
