--- a/index.html
+++ b/index.html
@@ -586,11 +586,8 @@
                 <!-- Slides -->
                 <div class="slide fade active" role="group" aria-label="Slide 1 of 5">
                                             <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
-
                     <img src="/BagChk/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-<!--                         <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
-                                    <br></br> -->
                         <br></br> 
                         <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
                     </div>
@@ -600,7 +597,6 @@
                     <img src="/BagChk/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                                             <br></br>
-
                         <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
                     </div>
                 </div>
@@ -609,7 +605,6 @@
                     <img src="/BagChk/images/trade.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                     <br></br>
-
                         <p class="text-[var(--text-light)]">Attend a world-class tradeshow at McCormick Place without carrying your bags. BagChk offers secure storage nearby for a seamless experience.</p>
                     </div>
                 </div>
@@ -626,26 +621,23 @@
                     <img src="/BagChk/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                                             <br></br>
-
                         <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
                     </div>
                 </div>
                     <!-- Additional Slides -->
 <div class="slide fade" role="group" aria-label="Slide 6 of 10">
             <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Marathon</h3>
-
     <img src="/BagChk/images/marathon.jpg" alt="Chicago Marathon" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                             <br></br>
-
         <p class="text-[var(--text-light)]">Join thousands of runners in one of the world’s premier marathons. Store your gear with BagChk and focus on the finish line.</p>
     </div>
 </div>
 <div class="slide fade" role="group" aria-label="Slide 7 of 10">
             <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Blues Festival</h3>
-
     <img src="/BagChk/images/blues.jpg" alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                                                    <br></br>
         <p class="text-[var(--text-light)]">Feel the soul of the city at the world’s largest free blues festival. Let BagChk handle your bags while you groove in Millennium Park.</p>
     </div>
 </div>
@@ -655,34 +647,29 @@
     <img src="/BagChk/images/Air.jpg" alt="Chicago Air and Water Show" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                             <br></br>
-
         <p class="text-[var(--text-light)]">Look up! Jets roar over Lake Michigan in this breathtaking summer spectacle. BagChk keeps your hands free for the perfect photo moment.</p>
     </div>
 </div>
 <div class="slide fade" role="group" aria-label="Slide 9 of 10">
             <h3 class="text-lg sm:text-xl font-semibold mb-2">Lollapalooza in Grant Park</h3>
-
     <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                                             <br></br>
-
         <p class="text-[var(--text-light)]">Catch your favorite artists at Chicago’s biggest music festival. Skip the baggage blues with BagChk and enjoy the music hands-free.</p>
     </div>
 </div>
 <div class="slide fade" role="group" aria-label="Slide 10 of 10">
             <h3 class="text-lg sm:text-xl font-semibold mb-2">Taste of Chicago</h3>
-
     <img src="/BagChk/images/taste.jpg" alt="Taste of Chicago" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
     <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-                                            <br></br>
-
+                                                    <br></br>
         <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
     </div>
 </div>
                  <!-- Navigation Buttons -->
-                <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
+<!--                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
                 <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
-
+ -->
                
                 <!-- Navigation Dots -->
                 <div class="dots-container flex justify-center mt-4">
